--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -121,11 +121,12 @@ Zaklínač 3: Divoký Hon \cite{Wiedzmin3} je akční \acs{RPG} hra, která byla
 
 Hráč se zde ujímá role Geralta z Rivie - zaklínače, \textbf{profesionálního lovce monster}. Ten je kromě svých dvou mečů\footnote{stříbrného pro boj s nestvůrami a železného proti lidem} vybaven flexibilními možnostmi pohybu, jednoduchými kouzly (tzv. Zaklínačská Znamení) a škálou ručně vařených lektvarů. Na své cestě bojuje s lidmi, duchy, upíry, bazilišky i nepopsatelnými obludami z nočních můr.
 Jak tedy vypadají mechaniky, skrze které bylo toto vše umožněno?:
-\bigbreak
+
 
 Základem jsou \textbf{dva typy úderů - rychlý a silný}. Jak vyplývá z názvu, rychlý úder je rychlejší, oproti tomu animace silného úderu trvá mírně delší čas, avšak zranění způsobené protivníkovi je také adekvátně zvýšené. K čemu je to dobré? Pro mnoho protivníků platí, že v okamžiku, kdy jim je učiněno nezanedbatelné zranění, přeruší akci, kterou se chystali provádět, a na zlomek času zakolísají. S rychlým úderem je hráč schopen toto zakolísání vyvolat častěji - s dobrým časováním se lze například dostat do cyklu, kdy lehkooděného protivníka hráč udolá jedním úderem za druhým aniž ten se zmohl udělat cokoliv proti vám. Toto stejné zakolísání však může potkat i hráče. Hráč se tedy neustále nachází v časovém tlaku, který ho vybízí kalkulovat - např. zda stihne dva rychlé údery, či raději jen jeden silný, než ho nějaký nepřítel přeruší. Dalším důvodem proč používat silný útok jsou těžkoodění nepřátelé, kterým rychlý útok udílí zranění velmi redukované. 
 
 Drobným doplňkem je akce \textbf{blokování}. Bojujete-li proti lidem, držení tlačítka blokování vás činí prakticky imunním proti běžným útokům mířícím na vás zepředu, za tu velmi drobnou cenu, že sám nemůžete útočit a pohybovat se po bojišti lze jen velmi pomalu. Zajímavější je \textbf{perfektní blokování} - pokud zahájíte blokování přesně v okamžiku, kdy na vás protivník vede úder, provedete odvetný protiúder, který protivníka na pár sekund omráčí. Tím je do boje vnesen další prvek časování. Rovněž je třeba dávat pozor na nepřátele, kteří blokují proti vám.
+\bigbreak
 
 Proti chaotickým útokům vedeným změtí zubů a drápů nestvůry však blokování mečem ztrácí smysl. Tehdy přichází na řadu možnosti úskoků a kotoulů, které nabízí \textbf{systém pohybu}. Kromě nich samozřejmě hra nabízí i klasickou chůzi a sprint. Úskok je velmi drobný posun do strany, který nespotřebovává výdrž, pouze má interní cooldown (několik desetin sekundy) zabraňující spamování. Cílem je umožnit hráči tak akorát uskočit z oblasti dopadu nepřítelovy zbraně. Pro zajištění, že tento záměr bude vždy naplněn, je postavě na malý zlomek sekundy poskytnuta celková nezranitelnost. Kotoul je pak rámcově obdobný s tím rozdílem, že spotřebovává výdrž a na oplátku ho lze použít k rychlému překonání velké vzdálenosti. Hra klade velký důraz na hromadné boje, kde hráč musí být schopen prioritizovat cíle a rychle využívat objevivších se zranitelností jednotlivých nepřátel. Vysoká mobilita, kterou kotoul poskytuje, je tedy více než nápomocná.  
 
@@ -150,6 +151,12 @@ Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že 
 Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prvkem. Například ve většině her žánru \textbf{\acs{FPS}} najdeme kromě širokého výběru palných zbraní i nějaký nůž jako poslední zálohu když dojde munice, v žánru \textbf{stealth} často vidíme chladnou zbraň jako prostředek k tiché likvidaci nepřátel a takto bychom mohli pokračovat. Mnohdy taková zbraň odpovídá popisu z 1.2.1 - cílem není, aby chladná zbraň sama o sobě byla zajímavou mechanikou, naopak \textbf{tvoří pouze jeden dílek} ve skládačce herního systému a pro hráče musí především být jednoduše uchopitelná. 
 
 Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symbolem} své hry - zmínit můžeme například hru DOOM \cite{DOOM1993} a motorovou pilu, či páčidlo ze série Half-Life \cite{HalfLife}.
+
+
+%------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
+ % xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx %
+%------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
+
 
 
 \section{Hry s větší kontrolou}
@@ -206,27 +213,41 @@ Kamenem úrazu pro hru však nesporně bylo \textbf{ovládání}. Tvůrci hry si
 \end{itemize}   
 Přes značné úsilí, které tvůrci této oblasti věnovali, stalo se ovládání hlavním předmětem hráčské kritiky. Mnoho hráčů si stěžovalo, že je hra jeho vinou nadmíru těžká, případně že si zkrátka \textbf{nehodlají na neotřelý způsob ovládání zvykat}. Přestože hra byla značně oceněna kritiky, mezi širokou herní veřejností se jí výrazných ohlasů nedostalo. Kromě datadisku Limb from Limb se již na její odkaz žádná další hra nepokusila navázat, pokud je autorovi této práce známo.
 
+
+
+
+
 \subsection{Mount\&Blade}
 
-Kultovní klasikou je Mount\&Blade. První verzi této hry vydalo turecké studio TaleWorlds v roce 2008, později se hra pro velkou oblíbenost mezi hráči dočkala datadisku Warband a velmi nedávno i druhého dílu Bannerlord, který mnoho mechanik hrubě nastíněných v původní hře dále rozvádí a prohlubuje. My se zde budeme věnovat prvnímu dílu, který je v kombinaci s datadiskem Warband i v dnešní době mezi hráči velmi oblíbený a materiálů pro analýzu nám poskytne zcela dostatečné množství.
+Kultovní klasikou je Mount\&Blade \cite{MountAndBlade}. První verzi této hry vydalo turecké studio TaleWorlds v roce 2008, později se hra pro velkou oblíbenost mezi hráči dočkala datadisku Warband a velmi nedávno i druhého dílu Bannerlord, který mnoho mechanik hrubě nastíněných v původní hře dále rozvádí a prohlubuje. My se zde budeme věnovat prvnímu dílu, který je v kombinaci s datadiskem Warband i v dnešní době mezi hráči velmi oblíbený a materiálů pro analýzu nám poskytne zcela dostatečné množství.
 
-Jde o \textbf{sandbox} s \acs{RPG} prvky, kde se hráč ujímá role vůdce žoldnéřské skupiny. V jeho kůži putuje od království ke království, verbuje vojáky, plní úkoly pro okolní šlechtice a účastní se po jejich boku bitev se šlechtici znepřátelených zemí. Svět je velmi silně inspirován středověkou Evropou, nenajdeme zde žádnou magii, nepřáteli jsou výhradně lidé. 
+Jde o \textbf{sandbox} s \acs{RPG} prvky, kde se hráč ujímá role vůdce žoldnéřské skupiny. V jeho kůži putuje od království ke království, verbuje vojáky, plní úkoly pro okolní šlechtice a účastní se po jejich boku bitev se šlechtici znepřátelených zemí. Svět je velmi silně inspirován středověkou Evropou, nenajdeme zde žádnou magii. Nepřáteli jsou výhradně lidé. 
 
-Ovládání vlastní hráčské postavy zde tvoří pouze polovinu skládačky bojového systému - tou druhou je udílení rozkazů zverbovaným vojákům. V bitvách se zde střetávají typicky vyšší desítky až nižší stovky bojovníků spřátelených a nepřátelských. \textbf{Hráčská postava je zde pouze jedním z mnoha} - počítačem řízení bojovníci mají shodné možnosti pohybu i ovládání zbraně a podléhají stejnému systému RPG progrese. 
+Ovládání vlastní hráčské postavy zde tvoří pouze polovinu skládačky bojového systému - tou druhou je udílení rozkazů zverbovaným vojákům. V bitvách se zde střetávají typicky vyšší desítky až nižší stovky bojovníků spřátelených a nepřátelských. \textbf{Hráčská postava je zde pouze jedním z mnoha} - počítačem řízení bojovníci mají shodné možnosti pohybu i ovládání zbraně a podléhají stejnému systému \acs{RPG} progrese. 
 
-Jak tedy vypadá ovládání zbraně? Každá zbraň má definovanou množinu útoků, které lze provádět. Hráč stiskem tlačítka myši zahájí nápřah, dle polohy kurzoru je vyberáno, který z útoků bude vykonán (např. nápřah nad hlavou kurzorem uprostřed nahoře, bodnutí kurzorem uprostřed obrazovky apod.), následně uvolněním tlačítka myši je útok vykonán.
+Jak tedy vypadá ovládání zbraně? Každá zbraň má definovanou množinu útoků, které lze provádět. Hráč stiskem tlačítka myši zahájí nápřah, dle polohy kurzoru je vybráno, který z útoků bude vykonán (např. nápřah nad hlavou kurzorem uprostřed nahoře, bodnutí kurzorem uprostřed obrazovky apod.), následně uvolněním tlačítka myši je útok vykonán.
 
-Zbraně jsou rozděleny na několik typů
+Zbraní najdeme více druhů - meče, sekery, kyje, kopí a další. Útočné zóny jsou napříč zbraněmi shodné, pouze některé u některých zbraní chybí (meč poskytuje všechny, kyj neumožňuje bodání, s kopím lze pouze bodat apod.). Animace, která se přehraje pro útok v dané zóně, je však unikátní pro daný typ zbraně\footnote{Nedochází k žádnému náhodnému výběru, danému páru \textit{zbraň - útočná zóna} přísluší vždy právě jedna pevně daná animace.}.
+
+Druhým typem akce, který lze vykonávat, je \textbf{blokování}. Je-li hráč vybaven štítem, stačí držet stisknuté levé tlačítko myši a postava je kryta proti veškerým úderům, které na ni míří zepředu. Chce-li však postava provést útok se zbraní, musí nejprve kryt přerušit, čímž ochrany pozbyde. Dalším omezujícím faktorem je omezená odolnost štítu - utrží-li štít určité množství \acs{dmg}, je zničen a postava ho zahodí. Čímž přijde na řadu obtížnější situace - blokování pomocí zbraně. Zde se opět dostáváme k využití úderových zón - zkrátka zóna, ve které obránce blokuje, musí odpovídat zóně útočníka - jinak úder nebude vyblokován.
+
+Prvkem, který umocňuje hráčův dojem realističnosti, je výpočet zranění. Hra se obecně nepokouší o realistickou fyzikální simulaci, avšak způsobené zranění je přesto determinováno kombinací mnoha faktorů, které účinně aproximují realistické chování - zmíníme rychlost zbraně, délku její dráhy apod. . Dále je využíváno jemné detekce kolizí. Zaprvé k tomu, aby se určila zasažená část těla - různým částem těla postavy odpovídá různý kus zbroje, která určuje, jakou mírou má zranění být redukováno. Zadruhé, zranění je velmi silně redukováno, pokud při své cestě zbraň prošla skrze zeď či jiný prvek okolního prostředí. 
+
+Nyní rámcově víme, jak bojový systém funguje. Pojďme se tedy podívat na benefity, které z této implementace plynou. Vidíme, že hře se podařilo najít kompromis slučující některé prvky, které by se z naší předchozí anylýzy mohly zdát vzájemně protichůdné.
+\begin{itemize}
+    \item \textbf{Jednoduchost X Dostatečný realismus} - 
+    \item \textbf{Uniformní ovládání X Osobitost jednotlivých zbraní} - 
+\end{itemize}
+
 
 \clearpage
-(stručné představení hry)
 
 (popis bojového systému)
-- hráč je jedním z mnoha
-- diskrétní - útokové zóny vybrané podle natočení obrazovky
-- blokování - zbraň kontextové; štít blokuje všechno ale dá se rozbít
-- různé typy zbraní - mohou mít pouze podmnožinu ze všech útokových zón
-
+%- hráč je jedním z mnoha
+%- diskrétní - útokové zóny vybrané podle natočení obrazovky
+%- blokování - zbraň kontextové; štít blokuje všechno ale dá se rozbít
+%- různé typy zbraní - mohou mít pouze podmnožinu ze všech útokových zón
+%- vyhodnocování dmg - bere v úvahu rychlost zbraně, za každou kolizi kterou zbraň při cestě potkala, je velký postih
 
 (jaké výhody z tohoto plynou)
 - celkem jednoduché a jednoduše uchopitelné, přitom má hráč pocit velké kontroly
