--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -55,6 +55,16 @@ Máte-li oba stejný dosah, pohyb se však nestává o nic méně důležitým. 
 
 Znakem každého dobrého šermíře je schopnost vcítit se do pozice svého protivníka a \textbf{odhadovat jeho budoucí akce} dříve, než se stanou. Nezkušený šermíř bude každý svůj úder provázet výrazným nápřahem, pro jeho protivníka pak není obtížné úder vyblokovat a přitom se rovnou k protivníkovi přiblížit a seknout po místě, které ví, že při úderu protivník nechal nechráněné. Zkušený šermíř pak ani nepotřebuje vidět výrazný nápřah, naučí se protivníkovu akci podvědomě vycítit z drobných náznaků (pohybů svalů, očí,...). Samozřejmě je možné předvádět údery fingovaně a čekat, že se při protiútoku otevře protivník vám. Pak záleží na jeho úsudku, zda úmysl prokoukne a provede fingovaný protiútok - stupňům falše se meze nekladou. 
 
+
+\begin{figure}[h]\centering
+    \center
+    \includegraphics[width=140mm]{../img/Meyer_1570_Sword_B.png}
+    \includegraphics[width=140mm]{../img/Meyer_1570_Sword_C.png}
+    \caption{techniky pro jedenapůlruční meč - Joachim Meyer (1570) \cite{KunstDesFechtens}}
+    \label{obr01:KunstDesFechtens}
+    
+\end{figure}
+
 \subsection{Hromadný boj a boj proti přesile}
 Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínky vedle chaotických situací, v rámci kterých v historii běžně k boji docházelo.   
 
