--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -263,9 +263,9 @@ Poslední hrou, kterou zmíníme, je Kingdom Come: Deliverance \cite{KCD}, vydá
 
 Ústřední myšlenka je zde podobná jako u Mount\&Blade, s tím rozdílem, že na její implementaci bylo věnováno \textbf{řádově více zdrojů a lidského úsilí}. Najdeme zde velmi podobný systém zón útoku, mezi kterými hráč vybírá pohybem kurzoru, tvůrci zde však vytvořili tisíce dílčích animací, které jsou skládány do naprosto realisticky působícího pohybu zbraně i šermíře. Systém byl vyvíjen na základě konzultace s odborníky na středověký způsob boje, animace tedy i odpovídají skutečným historickým technikám. Dále systém zahrnuje neznámý avšak pravděpodobně značný počet rozličných heuristik, které se pro hráče neviditelným způsobem starají o vyšší responzivitu, další realističnost atd. .
 
-Celkově jde o systém nabízející značnou hloubku. Najdeme zde například propracovaný systém komb, velký důraz na správu výdrže a časovací události pro blokování nepřátelských úderů. Hráčské ohlasy dávají za pravdu, že hra nabízí nejrealističtější zážitek boje s chladnou zbraní, jaký najdeme na trhu.
+Celkově jde o systém nabízející značnou hloubku. Najdeme zde například propracovaný systém komb, velký důraz na správu výdrže a časovací události pro blokování nepřátelských úderů. Hráčské ohlasy dávají za pravdu, že hra nabízí \textbf{nejrealističtější zážitek boje s chladnou zbraní, jaký najdeme na trhu}.
 
-Pokoušet se zde o hloubkový rozbor však nemá valný smysl - byl by to úkol obtížný a jeho splnění by nám nepřineslo mnoho užitku, protože implementace jakéhokoliv jednoho dílčího aspektu takového bojového systému se naprosto vymyká finančním i časovým možnostem autora této práce.
+Pokoušet se zde o hloubkový rozbor však nemá valný smysl - byl by to úkol obtížný a jeho splnění by nám nepřineslo mnoho užitku, protože napodobení jakéhokoliv jednoho dílčího aspektu takového bojového systému se naprosto \textbf{vymyká časovým i finančním možnostem autora této práce}.
 
 
 \section{Alternativní ovladače}
