--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -163,6 +163,13 @@ Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prv
 Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symbolem} své hry - zmínit můžeme například hru DOOM \cite{DOOM1993} a motorovou pilu, či páčidlo ze série Half-Life \cite{HalfLife}.
 
 
+\subsection{Shrnutí}
+Pokud zbraň obsahuje násilné prvky, s největší pravděpodobností v ní najdeme nějakou chladnou zbraň. Typický způsob její implementace je model "černé skříňky": hráči je poskytnuto jedno tlačítko - \textbf{Zaútoč!} - po jeho stisknutí hráčská postava sama provede útok jak uzná za vhodné. 
+
+Výhodami toho přístupu je vysoká přívětivost a nenáročnost pro nové hráče a schopnost sloužit jako uniformní rozhraní slučující i velmi odlišné typy zbraní (světelný meč, řemdih, rozbitou lahev od pálenky). Některým hráčům však může vadit nedostatečný pocit kontroly nad konáním jejich postavy.
+
+V mnoha hrách (např. žánry \acs{FPS}, stealth) slouží chladná zbraň pouze jako doplňující prvek, jednoduchost tohoto přístupu je tedy ideálním stavem. Chce-li hra systému chladné zbraně přidat na hloubce, aby mohl sloužit jako nosná herní mechanika, dosahuje se toho typicky důrazem na pohyb, časování, a kombinací s dalšími prvky (magie, lektvary, pasti v herním prostředí).
+
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
  % xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx %
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
